@@ -587,6 +587,23 @@ pool_notify(pool_t pool, struct pool_notify *notify)
 }
 
 void
+pool_ref_notify_impl(pool_t pool, struct pool_notify *notify TRACE_ARGS_DECL)
+{
+    pool_notify(pool, notify);
+    pool_ref_impl(pool TRACE_ARGS_FWD);
+}
+
+void
+pool_unref_denotify_impl(pool_t pool, struct pool_notify *notify
+                         TRACE_ARGS_DECL)
+{
+    assert(!notify->destroyed);
+
+    pool_denotify(notify);
+    pool_unref_impl(pool TRACE_ARGS_FWD);
+}
+
+void
 pool_trash(pool_t pool)
 {
     if (pool->trashed)
