@@ -1,6 +1,7 @@
 cm4all-beng-proxy (0.7.29) unstable; urgency=low
 
   * http-cache: added missing pool_unref() in memcached_miss()
+  * pool: added checked pool references
 
  --
 
